--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Cambodia</title>
     <link rel="icon" href="./cambodia.png">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediaqury.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
@@ -18,17 +19,23 @@
             <div class="header-container">
                 <a class="logo" href="index.html">CAMBODIA</a>
                 <div class="header-main">
-                    <a class="monuments" href="#">Monuments</a>
+                    <a class="monuments" href="../Monument/Monuments.html">Monuments</a>
                     <a class="traditions" href="#">Tradition</a>
                     <a class="contact" href="#">Contact Us</a>
                 </div>
 
             </div>
             <div class="welcome">
-                <h2>WELCOME TO:</h2>
-                <h1>CAMBODIA</h1>
+                <h2 class="welcomet">WELCOME TO:</h2>
+                <h1 class="cambodia">CAMBODIA<br> Angkor Wat</h1>
             </div>
+            <div class="buttons">
+                <button class="left"><</button>
+                <button class="right">></button>
+            </div>
+
         </div>
+
     </header>
 
 
@@ -40,5 +47,7 @@
 
 
 
+
+    <script src="script.js"></script>
 </body>
 </html>
